# BazOS

./: .gitignore  Cargo.toml  kernel.sh  linker.ld
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  serial.rs  vga.rs
kernel/src/async/: executor.rs  mod.rs  process.rs  scheduler.rs  task.rs  thread.rs  waker.rs
kernel/src/async/tasks/: keyboard.rs  mod.rs  stream.rs
kernel/src/fs/: device.rs  driver.rs  file.rs  mod.rs  path.rs
kernel/src/fs/elf/: error.rs  header.rs  mod.rs  program_header.rs
kernel/src/gdt/: mod.rs
kernel/src/interrupts/: breakpoint.rs  divide_by_zero.rs  double_fault.rs  idt.rs  invalid_opcode.rs  mod.rs  page_fault.rs
kernel/src/interrupts/hardware/: keyboard.rs  timer.rs
kernel/src/interrupts/syscall/: fork.rs  mod.rs  out.rs
kernel/src/io/: acpi.rs  configuration_access.rs  device.rs  hal.rs  mod.rs
kernel/src/io/disk/: bitmap.rs  driver.rs  file.rs  header.rs  inode.rs  mod.rs
kernel/src/memory/: binary_allocator.rs  buddy_allocator.rs  composite_allocator.rs  frame_allocator.rs  heap.rs  mod.rs  program_allocator.rs  slab_allocator.rs
kernel/src/program/: executor.rs
kernel/src/utils/: debug.rs  interval.rs  mod.rs  tree.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs
src/: lib.rs  main.rs  vga.rs
src/gdt/: tss.rs
src/interrupts/: divide_by_zero.rs  double_fault.rs  idt.rs  mod.rs  page_fault.rs
src/interrupts/hardware/: keyboard.rs  mod.rs  timer.rs
src/memory/: allocator.rs  binary_allocator.rs  buddy_allocator.rs  composite_allocator.rs  heap.rs  mod.rs  slab_allocator.rs
src/utils/: debug.rs
std/: Cargo.toml
std/src/: fs.rs  interrupts.rs  lib.rs  qemu.rs  syscall.rs  tests.rs
tests/: basic_boot.rs  heap_allocation.rs
user/hello_world/: Cargo.toml
user/hello_world/.cargo/: config.toml
user/hello_world/src/: main.rs
xtask/src/: main.rs
xtask/src/disk/: mod.rs  node.rs  path.rs
