[package]
name = "BazOS"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = "0.10.3"
bootloader = { version = "0.9", features = ["map_physical_memory"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.5.2"
uart_16550 = "0.4.0"
volatile = "0.2.6"
x86_64 = "0.15.4"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[[bin]]
name = "BazOS"
test = true
bench = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33   # (0x10 << 1) | 1
test-timeout = 5              # (in seconds)
