[package]
name = "BazOS"
version = "0.1.0"
edition = "2024"

[dependencies]
std = { path = "../std" }
bit_field = "0.10.3"
bootloader = { version = "0.9", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.5.2"
uart_16550 = "0.4.0"
volatile = "0.2.6"
x86_64 = "0.15.4"
virtio-drivers = "0.13.0"
acpi = { version = "5.2.0", default-features = false }

[[bin]]
name = "BazOS"
test = true
bench = false

[package.metadata.bootloader]
boot-info-address = "0x600000000000"
kernel-stack-address = "0x600010000000"
physical-memory-offset = "0x700000000000"

[package.metadata.bootimage]
run-args = [
    "-device", "virtio-blk-pci,drive=disk0",
    "-drive", "if=none,format=raw,file=../disk/disk.img,id=disk0",
    "-serial", "stdio",
    "-machine", "q35",
]
test-args = [
    "-device", "virtio-blk-pci,drive=disk0",
    "-drive", "if=none,format=raw,file=../disk/disk.img,id=disk0",

    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",

    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33   # (0x10 << 1) | 1
test-timeout = 5              # (in seconds)
